--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -37,37 +37,42 @@ footer: #2b2b2b;
 .hero-dos{
 	margin-top: 200px;
 	margin-bottom: 200px;
-	padding-top: 30px;
-	padding-bottom: 30px;
-	padding-left: 30px;
+	padding-top: 40px;
+	padding-bottom: 50px;
+	padding-left: 50px;
 	background-color: #f7b617;
 }
-.in-uno, .in-dos{
-	width: 100px;
+.in-uno{
+	width: 150px;
+	margin-right: 60px;
+	background: none;
+	border: none;
+    border-bottom: 2px solid white;
+}
+.in-dos{
+	width: 150px;
+	margin-left: 60px;
 	background: none;
 	border: none;
     border-bottom: 2px solid white;
 }
 .boton-hero{
-	margin-top: 10px;
+	margin-top: 30px;
 	color: black;
 	border-style: none;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	padding-left: 10px;
-	padding-right: 10px;
-	border-radius: 5px;
+	padding: 10px 30px;
+	border-radius: 7px;
 }
 .boton-hero:hover {
-	margin-top: 10px;
+	margin-top: 30px;
 	color: white;
 	background-color: #2b2b2b;
 	border-style: none;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	padding-left: 10px;
-	padding-right: 10px;
-	border-radius: 5px;
+	padding-top: 10px 30px;
+	border-radius: 7px;
+}
+.viaja{
+	font-size: 26px;
 }
 /*informacion*/
 #informacion{
@@ -77,9 +82,8 @@ footer: #2b2b2b;
 	padding-bottom: 50px;
 }
 .info{
-	padding-top: 30px;
-	padding-bottom: 30px;
-	border: 2px solid white;	
+	border: 2px solid white;
+	border-left: none;	
 }
 .imagen-celular{
 	margin: 50px;
@@ -88,6 +92,7 @@ footer: #2b2b2b;
 	font-size: 21px;
 	margin-top: 50px;
 	margin-bottom: 50px;
+	padding-right: 180px;
 }
 /*conduce*/
 #conduce{
@@ -98,7 +103,7 @@ footer: #2b2b2b;
 	height: 75vh;
 }
 .conduce-dos{
-	padding: 110px 40px 200px 30px;
+	padding: 100px 60px 195px 45px;
 	background-color: rgba(43, 43, 43, 0.4);
 }
 .boton-conduce{
@@ -115,16 +120,74 @@ footer: #2b2b2b;
 }
 /*tarifas*/
 #tarifas{
+	color: white;
 	background-color: #f7b617;
-
+}
+.tari{
+	margin: 100px 0;
+}
+.consulta{
+	margin:30px 0 30px 0;
+	font-size: 16px;
+}
+.boton-ruta{
+	border:0;
+	padding: 8px 30px;
+	border-radius: 3px;
+	color: #2b2b2b;
+	background-color: white;
 }
 #map{	
+	margin: 50px 0;
 	height: 70vh;
-	border: 10px solid #DDAA98;
+	border: 1px solid white;
+}
+.input-tarifas{
+	margin-left: 20px;	
+    margin-bottom: 30px;
+	width: 50%;
+	border: 1px solid white;
+	background: none;
+	border-radius: 7px;
+	padding: 10px;
 }
 /*footer*/
 footer{
+	padding-top: 50px;
+	padding-bottom: 100px;
 	background-color: #2b2b2b;
 	color: white;
 }
+.linea-uno{
+	border: 1px solid white;
+	margin-top: 20px;
+}
+ul{
+	list-style-type: none;
+}
+li{
+	margin-top: 20px;
+	margin-bottom: 10px;
+}
+li a{
+	text-decoration: none;
+	color: white;
+}
+li a:hover{
+	text-decoration: none;
+	color: grey;
+}
+.logo-blanco{
+	
+}
+.icono-google{
+	margin-top: 200px; 
+}
+.iconouno{
+	margin-bottom: 30px;
+    width: 60%;
+}
 
+
+.row{margin-right: 0 !important;
+    margin-left: 0 !important;}
