--- a/asset/css/media.css
+++ b/asset/css/media.css
@@ -1,5 +1,5 @@
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 700px) {
 .navbar{
-        background-color: lightblue;
+        background-color: ; /*prueba*/
     }
 }
