--- a/asset/css/media.css
+++ b/asset/css/media.css
@@ -1,5 +1,25 @@
 @media only screen and (max-width: 700px) {
-.navbar{
-        background-color: ; /*prueba*/
-    }
+.imagen-celular {
+	margin: 40px 0 20px 20px;
+	padding: 30px;
+	width: 90%;
+	border: 2px solid white;
 }
+.texto-infoxs {
+	margin: 5px;
+}
+#conduce{
+	color: white;
+    background-image: url(../img/conduce.jpg);
+    background-size: cover;
+}
+.conduce-dos {
+    padding: 83px 60px 160px 45px;
+    background-color: rgba(43, 43, 43, 0.4);
+}
+.input-tarifas {
+
+    width: 100%;
+}
+}
+
