ultimos arreglines antes de entregar

--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -118,6 +118,18 @@ footer: #2b2b2b;
 	font-family: "raleway";
 	font-size: 15px;
 }
+.boton-conduce:hover{
+	color: white;
+	background-color: #2b2b2b;
+	border-radius: 3px;
+	margin: 15px auto;
+	padding: 10px 15px;
+	color: white;
+	border:0;
+	font-weight: 700;
+	font-family: "raleway";
+	font-size: 15px;
+}
 /*tarifas*/
 #tarifas{
 	color: white;
@@ -136,6 +148,13 @@ footer: #2b2b2b;
 	border-radius: 3px;
 	color: #2b2b2b;
 	background-color: white;
+}
+.boton-ruta:hover{
+	border:0;
+	padding: 8px 30px;
+	border-radius: 3px;
+	color: white;
+	background-color: #2b2b2b;
 }
 #map{	
 	height: 70vh;
